stop header wrapping

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -15,6 +15,7 @@
     margin: 0;
     font-size: 1.5rem;
     color: var(--fg);
+    text-wrap: nowrap;
   }
   .links {
     margin: 0;
